[project]
name = "tpwres"
version = "0.0.0"
description = "Build scripts for tpwres"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icalendar~=7.0",
    "matplotlib~=3.10",
    "mistletoe~=1.5",
    "pyparsing~=3.2",
    "pyyaml~=6.0",
    "requests~=2.32",
    "unidecode~=1.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["src/test"]

[dependency-groups]
dev = []
